--- a/Kaggle_DL_MedImg.ipynb
+++ b/Kaggle_DL_MedImg.ipynb
@@ -10,6 +10,38 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "COLAB = False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "\n",
+        "if COLAB:\n",
+        "    !git clone https://github.com/abodinier/DCGAN-dose-prediction.git\n",
+        "    !pip install transformers\n",
+        "    !pip install torchmetrics\n",
+        "    import sys\n",
+        "    sys.path.append(\"./DCGAN-dose-prediction/\")\n",
+        "    \n",
+        "    from google.colab import drive\n",
+        "\n",
+        "    drive.mount('/content/gdrive')\n",
+        "    STORAGE = Path(\"/content/gdrive/MyDrive/dose-prediction\")\n",
+        "else:\n",
+        "    STORAGE = Path(\"./\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 251,
       "metadata": {
         "id": "p1JlrLBNyCS2"
@@ -22,8 +54,7 @@
         "import json\n",
         "import datetime\n",
         "import numpy as np\n",
-        "import pandas as pd \n",
-        "from pathlib import Path\n",
+        "import pandas as pd\n",
         "from tqdm import tqdm_notebook\n",
         "import matplotlib.pyplot as plt\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
@@ -578,20 +609,13 @@
         }
       ],
       "source": [
-        "l1_criterion = torch.nn.L1Loss()\n",
-        "cross_entropy_loss = torch.nn.BCEWithLogitsLoss()\n",
-        "accuracy_fn = Accuracy()\n",
+        "l1_criterion = torch.nn.L1Loss().to(DEVICE)\n",
+        "cross_entropy_loss = torch.nn.BCEWithLogitsLoss().to(DEVICE)\n",
+        "accuracy_fn = Accuracy(task=\"binary\").to(DEVICE)\n",
         "\n",
         "# Initialize the generator\n",
-        "generator = Generator()\n",
-        "discriminator = Discriminator()\n",
-        "\n",
-        "\n",
-        "if DEVICE == \"cuda\":\n",
-        "    generator = generator.cuda()\n",
-        "    discriminator.cuda()\n",
-        "    l1_criterion.cuda()\n",
-        "    cross_entropy_loss.cuda()\n",
+        "generator = Generator().to(DEVICE)\n",
+        "discriminator = Discriminator().to(DEVICE)\n",
         "\n",
         "# Optimizer\n",
         "optimizerG = torch.optim.Adam(\n",
