--- a/Kaggle_DL_MedImg.ipynb
+++ b/Kaggle_DL_MedImg.ipynb
@@ -58,6 +58,7 @@
         "import pandas as pd\n",
         "from tqdm.notebook import tqdm\n",
         "import matplotlib.pyplot as plt\n",
+        "from collections import OrderedDict\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
         "\n",
         "import torch\n",
@@ -297,98 +298,6 @@
         "## Generator\n",
         "\n",
         "Convolutional UNet with 5 downscale layers and 5 upscale layers"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "J0qVsiE7ig-D"
-      },
-      "outputs": [],
-      "source": [
-        "class Down(nn.Module):\n",
-        "    def __init__(self, in_size, out_size, dropout=0.1):\n",
-        "        super(Down, self).__init__()\n",
-        "        self.model = nn.Sequential(\n",
-        "            nn.Conv2d(in_size, out_size, kernel_size=3, stride=2, padding=1),\n",
-        "            nn.BatchNorm2d(out_size),\n",
-        "            nn.Dropout(dropout),\n",
-        "            nn.ReLU()\n",
-        "        )\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        return self.model(x)\n",
-        "\n",
-        "\n",
-        "class Up(nn.Module):\n",
-        "    def __init__(self, in_size, out_size, dropout=0.1):\n",
-        "        super(Up, self).__init__()\n",
-        "        self.model = nn.Sequential(\n",
-        "            nn.ConvTranspose2d(\n",
-        "                in_size,\n",
-        "                out_size,\n",
-        "                kernel_size=3,\n",
-        "                padding=\"same\"\n",
-        "            ),\n",
-        "            nn.BatchNorm2d(out_size),\n",
-        "            nn.Dropout(dropout),\n",
-        "            nn.ReLU()\n",
-        "        )\n",
-        "\n",
-        "    def forward(self, x, skip_input=None):\n",
-        "        if skip_input is not None:\n",
-        "            x = torch.cat((x, skip_input), 1)  # add the skip connection\n",
-        "        x = self.model(x)\n",
-        "        return x\n",
-        "\n",
-        "\n",
-        "class Generator(nn.Module):\n",
-        "    def __init__(self, in_channels=11, out_channels=1):\n",
-        "        super(Generator, self).__init__()\n",
-        "\n",
-        "        self.down1 = Down(in_channels, 32)\n",
-        "        self.down2 = Down(32, 64)\n",
-        "        self.down3 = Down(64, 128)\n",
-        "        self.down4 = Down(128, 256)\n",
-        "        self.down5 = Down(256, 256)\n",
-        "\n",
-        "        self.up1 = Up(256, 256)\n",
-        "        self.up2 = Up(512, 128)\n",
-        "        self.up3 = Up(256, 64)\n",
-        "        self.up4 = Up(128, 32)\n",
-        "\n",
-        "        self.head = nn.Sequential(\n",
-        "            nn.Upsample(scale_factor=2),\n",
-        "            nn.Conv2d(64, out_channels, kernel_size=3, padding=1),\n",
-        "            nn.Tanh(),\n",
-        "        )\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        d1 = self.down1(x)\n",
-        "        d2 = self.down2(d1)\n",
-        "        d3 = self.down3(d2)\n",
-        "        d4 = self.down4(d3)\n",
-        "        d5 = self.down5(d4)\n",
-        "\n",
-        "        u1 = self.up1(d5)\n",
-        "        u2 = self.up2(u1, d4)\n",
-        "        u3 = self.up3(u2, d3)\n",
-        "        u4 = self.up4(u3, d2)\n",
-        "        \n",
-        "        u4 = torch.cat((u4, d1), dim=1)\n",
-        "        out = self.head(u4)\n",
-        "\n",
-        "        return out"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from collections import OrderedDict"
       ]
     },
     {
@@ -812,7 +721,7 @@
         "        optimizerG.zero_grad()\n",
         "        generated_dose = generator(img)\n",
         "        generator_l1_loss = l1_criterion(\n",
-        "            input=generated_dose,\n",
+        "            input=generated_dose[:, 0, :, :],\n",
         "            target=real_dose\n",
         "        )\n",
         "        discriminator_on_generated_dose = discriminator(img, generated_dose)\n",
@@ -876,7 +785,7 @@
         "            val_acc_d.append(d_acc)\n",
         "            \n",
         "            generator_l1_loss = l1_criterion(\n",
-        "                input=generated_dose,\n",
+        "                input=generated_dose[:, 0, :, :],\n",
         "                target=real_dose\n",
         "            )\n",
         "            generator_adversarial_loss = cross_entropy_loss(\n",
