Update params as in Colab

--- a/Kaggle_DL_MedImg.ipynb
+++ b/Kaggle_DL_MedImg.ipynb
@@ -520,22 +520,19 @@
         "        super(Discriminator, self).__init__()\n",
         "\n",
         "        self.model = torch.nn.Sequential(\n",
-        "            torch.nn.LazyConv2d(128, 5, stride=2),\n",
+        "            torch.nn.LazyConv2d(128, 5),\n",
         "            torch.nn.MaxPool2d(2),\n",
         "            torch.nn.BatchNorm2d(128),\n",
-        "            torch.nn.Dropout(dropout),\n",
         "            torch.nn.ReLU(),\n",
         "            \n",
-        "            torch.nn.Conv2d(128, 256, 3, stride=2),\n",
+        "            torch.nn.Conv2d(128, 256, 3),\n",
         "            torch.nn.MaxPool2d(2),\n",
         "            torch.nn.BatchNorm2d(256),\n",
-        "            torch.nn.Dropout(dropout),\n",
         "            torch.nn.ReLU(),\n",
         "            \n",
-        "            torch.nn.Conv2d(256, 256, 3, stride=2),\n",
+        "            torch.nn.Conv2d(256, 256, 3),\n",
         "            torch.nn.MaxPool2d(2),\n",
         "            torch.nn.BatchNorm2d(256),\n",
-        "            torch.nn.Dropout(dropout),\n",
         "            torch.nn.ReLU(),\n",
         "            \n",
         "            torch.nn.Flatten(),\n",
@@ -566,13 +563,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "ALPHA = 0.5  # ALPHA = 1 => only adversarial loss, ALPHA = 0 => only L1 loss\n",
+        "ALPHA = 0.3  # ALPHA = 1 => only adversarial loss, ALPHA = 0 => only L1 loss\n",
         "\n",
         "LR_G = 1e-3\n",
         "LR_D = 1e-3\n",
         "\n",
-        "N_EPOCHS = 30\n",
-        "BATCH_SIZE = 128\n",
+        "N_EPOCHS = 50\n",
+        "BATCH_SIZE = 64\n",
         "\n",
         "train_dataset = DoseDataset(root=DATA_DIR, mode=\"train_small\")\n",
         "test_dataset = DoseDataset(root=DATA_DIR, mode=\"test\")\n",
